CHANGELOG
--------------------------

ClanSphere 2010.0 Final >> 2010-07-26
___________________________________________________________

-- Recommended PHP version changed to 5.3.3

-> Added full support for Microsoft IIS 7.0+ webserver (hajo)
-> Added full support for Microsoft SQL Server 2005+ with PDO [pdo_sqlsrv extension] (hajo)
-> Fixes in cups module (spongebob)
-> Fixes in servers module (fr33z3m4n)
-> Fixed error page for PHP 4 to be shown again (hajo)
-> Removed a part of the upload htaccess file as it caused some errors (hajo)
-> Rewrite of template engine from regex to tokenizer [thx to jokey for idea] (hajo)
-> Updated amLine to the most current version [used by count mod] (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.0 RC 1 >> 2010-07-07
___________________________________________________________

-> Added mail notification for every eventguest status change case (hajo)
-> Added mail signature that is added to the end of every mail (hajo)
-> Added multi eventguest entry form to events mod (hajo)
-> Fixed cups module (spongebob)
-> Fixed maintenance mode in some situations (schiri)
-> Fixed template caching in some situations (hajo, schiri)
-> Moved imprint edit link from manage to options (hajo)
-> Reworked xsrf protection (schiri)
-> Removed legacy bxcp update and information (hajo)
-> Removed notification system from users mod as it was too dirty to fix it (hajo)
-> Switched server classes from phgstats to GameQ (fr33z3m4n)
-> Updated CKEditor to 3.3.1 (hajo)


ClanSphere 2010.0 beta 1 >> 2010-06-19
___________________________________________________________

-- Recommended PHP version changed to 5.3.2
-- Required PHP version changed to 5.0

-> Added a medals list (duriel)
-> Added mail-function to subscription (spongebob)
-> Added board/navtop2 (spongebob)
-> Added verification for users birthdate (spongebob)
-> Added date to files/navlist (spongebob)
-> Added fightus and joinus to users/navlogin (spongebob)