@@ -18,7 +18,7 @@ $cs_main = array( 'charset'         => $charset,
                   'public'          => 1,
                   'img_path'        => 'crystal_project',
                   'img_ext'         => 'png',
-                  'version_name'    => '2010.0 RC 2',
+                  'version_name'    => '2010.0 DEV 4',
                   'version_date'    => '2010-07-26');
 
 require_once 'system/core/functions.php';
