@@ -1,0 +1,3 @@
+UPDATE {pre}_options SET options_value = '2010.0 DEV 4' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2010-07-26' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = 59 WHERE options_mod = 'clansphere' AND options_name = 'version_id';
