@@ -1,7 +1,13 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2010.0 Final >> 2010-07-26
+ClanSphere 2010.0 Final >> 2010-07-XX
+___________________________________________________________
+
+
+
+
+ClanSphere 2010.0 RC 2 >> 2010-07-26
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.3.3
